Move to MVVM the initial project.

--- a/app/src/main/res/layout/activity_core.xml
+++ b/app/src/main/res/layout/activity_core.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activities.CoreActivity">
 
-    <fragment
-        android:id="@+id/fragment_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.MapsActivity" />
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/bottom_view"
