--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorAccentDark">#FF8C00</color>
+
+    <color name="lightGrey">#B5B5B5</color>
+    <color name="black">#000</color>
 </resources>
