--- a/app/src/main/res/layout/restaurant_recyclerview.xml
+++ b/app/src/main/res/layout/restaurant_recyclerview.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView_restaurant" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewAdress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -39,10 +39,10 @@
         android:layout_marginEnd="10dp"
 
         android:textColor="@color/lightGrey"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewAdress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/textViewAdress" />
 
 
 
