--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
 
     <color name="lightGrey">#B5B5B5</color>
     <color name="black">#000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#ec7d1a</color>
 </resources>
