Work on DetailActivity with MVVM (add repository and ViewModel) and modifye the webservice "ApiDetails"

--- a/app/src/main/res/layout-v21/activity_core.xml
+++ b/app/src/main/res/layout-v21/activity_core.xml
@@ -6,24 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".main.CoreActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/top_search_menu"
-        android:background="@color/colorPrimary"
-
         app:layout_constraintTop_toTopOf="parent" />
-
-    <fragment
-        android:id="@+id/autocomplete_fragment"
-        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_view"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
