--- a/app/src/main/res/layout/activity_details_restaurant.xml
+++ b/app/src/main/res/layout/activity_details_restaurant.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".restaurant.RestaurantDetailActivity">
+    tools:context=".restaurantDetails.RestaurantDetailActivity">
 
     <ImageView
         android:id="@+id/imageViewPictureRestaurant"
