--- a/app/src/main/res/layout/activity_details_restaurant.xml
+++ b/app/src/main/res/layout/activity_details_restaurant.xml
@@ -10,7 +10,8 @@
         android:id="@+id/imageViewPictureRestaurant"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/desc_img_recyclerview" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabSelectedRestaurant"
@@ -50,54 +51,67 @@
             android:textColor="@color/white" />
     </androidx.cardview.widget.CardView>
 
-    <TextView
+    <Button
         android:id="@+id/textViewCall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:text="@string/call"
         android:textColor="@color/orange"
+        android:background="@color/fui_transparent"
         android:textSize="17sp"
         android:textStyle="bold"
         app:drawableTopCompat="@drawable/ic_baseline_local_phone_24"
-        android:drawablePadding="11dp"
+        android:drawablePadding="13dp"
+        android:clickable="true"
+        android:focusable="true"
 
         app:layout_constraintEnd_toStartOf="@+id/textViewLike"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        tools:ignore="MissingPrefix"
+         />
 
-    <TextView
+    <Button
         android:id="@+id/textViewLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:text="@string/like"
         android:textColor="@color/orange"
+        android:background="@color/fui_transparent"
         android:textSize="17sp"
         android:textStyle="bold"
         app:drawableTopCompat="@drawable/ic_baseline_star_24"
-        android:drawablePadding="11dp"
+        android:drawablePadding="13dp"
+        android:clickable="true"
+        android:focusable="true"
 
 
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        tools:ignore="MissingPrefix" />
 
-    <TextView
+    <Button
         android:id="@+id/textViewWebsite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:text="@string/website"
         android:textColor="@color/orange"
+        android:background="@color/fui_transparent"
         android:textSize="17sp"
         android:textStyle="bold"
         app:drawableTopCompat="@drawable/ic_baseline_public_24"
-        android:drawablePadding="11dp"
+        android:drawablePadding="13dp"
+        android:clickable="true"
+        android:focusable="true"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewLike"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        tools:ignore="MissingPrefix" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
