--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="RatingBar" parent="@android:style/Widget.RatingBar">
         <item name="colorControlNormal">@color/orange</item>
         <item name="colorControlActivated">@color/white</item>
