--- a/app/src/main/res/layout/item_mates.xml
+++ b/app/src/main/res/layout/item_mates.xml
@@ -2,15 +2,28 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <ImageView
+        android:id="@+id/profile_picture_imageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+
+        android:layout_margin="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/info_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxLength="25"
+        android:textSize="18sp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/profile_picture_imageView"
+        app:layout_constraintStart_toEndOf="@+id/profile_picture_imageView"
+        app:layout_constraintTop_toTopOf="@+id/profile_picture_imageView"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
