--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,12 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#8B0000</color>
     <color name="colorAccentDark">#FF8C00</color>
 
     <color name="lightGrey">#B5B5B5</color>
     <color name="black">#000</color>
     <color name="white">#FFFFFF</color>
     <color name="orange">#ec7d1a</color>
+    <color name="green">#008000</color>
 </resources>
