--- a/app/src/main/res/layout/activity_sign_in_mail.xml
+++ b/app/src/main/res/layout/activity_sign_in_mail.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".authentication.SignInMailActivity">
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/mail_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="username"
+        android:hint="@string/mail"
         android:inputType="textEmailAddress"
-
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/password_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"
+        android:hint="@string/password"
         android:inputType="textPassword"
 
-        app:layout_constraintTop_toBottomOf="@+id/username"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/mail_editText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
