Update info for Restaurantlist log with email work fine i resolved some bugs like crash when mapFragment was resumed

--- a/app/src/main/res/layout/edittext_mail_layout.xml
+++ b/app/src/main/res/layout/edittext_mail_layout.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".authentication.SignInMailActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
         android:id="@+id/mail_editText"
@@ -12,15 +10,17 @@
         android:layout_height="wrap_content"
         android:hint="@string/mail"
         android:inputType="textEmailAddress"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/password_editText" />
 
     <EditText
         android:id="@+id/password_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
 
-        app:layout_constraintTop_toBottomOf="@+id/mail_editText" />
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
