--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="green">#006400</color>
     <color name="orangered">#FF4500</color>
     <color name="darkGrey">#242424</color>
+    <color name="red">#FF0000</color>
 </resources>
