--- a/app/src/main/res/layout/item_mates.xml
+++ b/app/src/main/res/layout/item_mates.xml
@@ -10,8 +10,8 @@
         android:id="@+id/profile_picture_imageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
-
         android:layout_margin="25dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,8 +19,10 @@
         android:id="@+id/info_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLength="25"
-        android:textSize="18sp"
+        android:maxLength="35"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:layout_marginStart="15dp"
 
         app:layout_constraintBottom_toBottomOf="@+id/profile_picture_imageView"
         app:layout_constraintStart_toEndOf="@+id/profile_picture_imageView"
