--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -54,11 +54,30 @@
         android:layout_height="wrap_content"
         android:textColor="@color/lightGrey"
 
-        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintBottom_toBottomOf="@+id/textViewAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewAddress"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewAddress" />
+
+    <TextView
+        android:id="@+id/users_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/hours_textView"
+        app:layout_constraintStart_toEndOf="@+id/hours_textView" />
+
+    <TextView
+        android:id="@+id/hours_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textColor="@color/lightGrey"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />
 
 
 
