--- a/app/src/main/res/layout/social_button_layout.xml
+++ b/app/src/main/res/layout/social_button_layout.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".authentication.SignInActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:facebook="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/social_media_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:text="log you with social media (preferable)"
+        android:text="@string/log_with_social_media"
         android:textAlignment="center"
         android:textSize="15sp"
 
@@ -60,9 +59,9 @@
         android:id="@+id/mail_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="log you with social media (preferable)"
+        android:text="@string/log_with_email"
         android:textAlignment="center"
-        android:textSize="15sp"
+        android:textSize="13sp"
         android:textStyle="bold"
         android:typeface="serif"
 
@@ -74,59 +73,12 @@
 
     <Button
         android:id="@+id/mail_login_button"
-        style=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
 
-        android:text="Log In with Email"
+        android:text="@string/log_with_email_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/mail_go_button"
-        style=""
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:visibility="gone"
-
-        android:text="GO"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/mail_sign_in_button"
-        style=""
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:visibility="gone"
-
-        android:text="GO"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <EditText
-        android:id="@+id/mail_editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/mail"
-        android:inputType="textEmailAddress"
-        android:visibility="gone"
-
-        app:layout_constraintTop_toBottomOf="@+id/facebook_sign_in_button" />
-
-    <EditText
-        android:id="@+id/password_editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:visibility="gone"
-        android:imeOptions="actionDone"
-
-        app:layout_constraintTop_toBottomOf="@+id/mail_editText"
-        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
