--- a/app/src/main/res/layout/activity_details_restaurant.xml
+++ b/app/src/main/res/layout/activity_details_restaurant.xml
@@ -24,6 +24,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewPictureRestaurant" />
 
+    <RatingBar
+        android:id="@+id/ratingBar"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="3"
+
+        app:layout_constraintVertical_bias="0.39"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
@@ -50,10 +62,11 @@
 
             android:layout_marginTop="44dp"
             android:textColor="@color/white" />
+
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/textViewCall"
+        android:id="@+id/call_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
@@ -67,14 +80,14 @@
         android:clickable="true"
         android:focusable="true"
 
-        app:layout_constraintEnd_toStartOf="@+id/textViewLike"
+        app:layout_constraintEnd_toStartOf="@+id/like_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         tools:ignore="MissingPrefix"
          />
 
     <Button
-        android:id="@+id/textViewLike"
+        android:id="@+id/like_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
@@ -86,6 +99,7 @@
         android:textColor="@color/orange"
         android:textSize="17sp"
         android:textStyle="bold"
+        app:drawableTint="@color/orange"
         app:drawableTopCompat="@drawable/ic_baseline_star_24"
 
 
@@ -95,7 +109,7 @@
         tools:ignore="MissingPrefix" />
 
     <Button
-        android:id="@+id/textViewWebsite"
+        android:id="@+id/website_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
@@ -110,7 +124,7 @@
         android:focusable="true"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewLike"
+        app:layout_constraintStart_toEndOf="@+id/like_button"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         tools:ignore="MissingPrefix" />
 
@@ -120,7 +134,7 @@
         android:layout_height="wrap_content"
 
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCall">
+        app:layout_constraintTop_toBottomOf="@+id/call_button">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/details_mates_recyclerView"
