--- a/app/src/main/res/layout/item_mates.xml
+++ b/app/src/main/res/layout/item_mates.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/profile_picture_imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="25dp"
 
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +23,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginStart="15dp"
+        android:lines="2"
 
         app:layout_constraintBottom_toBottomOf="@+id/profile_picture_imageView"
         app:layout_constraintStart_toEndOf="@+id/profile_picture_imageView"
