--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,12 +24,12 @@
 
     <style name="TimeRestaurantClosingSoon">
         <item name="android:textColor">@color/orange</item>
-        <item name="android:textStyle">italic</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="TimeRestaurantOpen">
         <item name="android:textColor">@color/green</item>
-        <item name="android:textStyle">italic</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 </resources>
