--- a/app/src/main/res/layout/activity_details_restaurant.xml
+++ b/app/src/main/res/layout/activity_details_restaurant.xml
@@ -10,8 +10,8 @@
         android:id="@+id/imageViewPictureRestaurant"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/desc_img_recyclerview" />
+        android:contentDescription="@string/desc_img_recyclerview"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabSelectedRestaurant"
@@ -30,11 +30,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="3"
+        app:layout_constraintHorizontal_weight="9"
+        app:layout_constraintVertical_weight="9"
 
-        app:layout_constraintVertical_bias="0.39"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="22dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewPictureRestaurant"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -52,7 +55,7 @@
             android:layout_marginTop="11dp"
 
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textViewAddressRestaurant"
@@ -139,8 +142,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/details_mates_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 
